2003-05-15  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_pollio.c (bk_polling_io_create): Clear memory before using
	(INSURE caught many uninitialized refs).
	(bk_polling_io_read): Delet pid from list before nuking.
	(bk_polling_io_flush): Ditto.

	* lib/b_funlist.c (bk_funlist_call): Nuke iterator when done (fix
	mem leak).

2003-05-15  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_pollio.c (bk_polling_io_read): Control return codes a little more closely

2003-05-14  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_general.c: Minor nits never having tested code...

	* lib/b_thread.c: Allow bk_exit from a thread to work correctly

	* lib/b_run.c: Implement thread creation for event queues and fds.

	* lib/b_pollio.c (polling_io_ioh_handler): Fix sanity dealing with user close, IOH close, etc

	* lib/b_bnbio.c: Functionality moved to polling_io

	* lib/b_pollio.c: Add bnbio functionality

2003-05-13  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk.h (BK_BTS2F): deal with struct bk_timespec too...

	* lib/b_strcode.c (bk_string_str2xml): #963: grow destination correctly

2003-05-12  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_bnbio.c: Specify thread state (though needs more work to be practical)

2003-05-09  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_relay.c: Specify thread state

	* lib/b_pollio.c: Threadize

2003-05-09  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_ioh.c (bk_ioh_init): only check bk_follow_pause when needed

2003-05-08  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_ioh.c: Threadize

	* lib/b_listnum.c: Specify thread state

2003-05-07  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_run.c: Threadize [stage one]

2003-05-02  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_url.c: Specify thread state

	* lib/b_time.c: Specify thread state

2003-05-01  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_sysutils.c: Specify thread state
