@@ -1,3 +1,7 @@
+2003-05-15  Seth Robertson  <seth@startide.sysdetect.com>
+
+	* lib/b_pollio.c (bk_polling_io_read): Handle unthrottle
+
 2003-05-15  James Tanis  <jtt@saint.sysdetect.com>
 
 	* lib/b_pollio.c (bk_polling_io_create): Clear memory before using
